// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChevronButton /> as anchor 1`] = `
.c4 {
  height: 18px;
  fill: #A2A4AD;
}

.c1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8C64CB;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  padding: 0;
  cursor: pointer;
  background-color: #F5F5F5;
}

.c0:hover {
  background-color: rgba(36,37,41,0.1);
  color: #9497a1;
}

.c0 .c2 {
  width: 28px;
  height: 28px;
}

<a
  className="c0 c1"
  element="a"
  target="_blank"
  variant="standard"
  weight="bold"
>
  <div
    className="c2 c3"
  >
    <svg
      className="c4"
      color="grey"
      viewBox="0 0 18 18"
    >
      <path
        d="M5.8 3.3L11.4 9l-5.6 5.7 1.4 1.4 7-7.1-7-7.1z"
      />
    </svg>
  </div>
</a>
`;

exports[`<ChevronButton /> as button 1`] = `
.c4 {
  height: 18px;
  fill: #A2A4AD;
}

.c1 {
  border: none;
  outline: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  padding: 0;
  cursor: pointer;
  background-color: #F5F5F5;
}

.c0:hover {
  background-color: rgba(36,37,41,0.1);
  color: #9497a1;
}

.c0 .c2 {
  width: 28px;
  height: 28px;
}

<button
  aria-disabled={undefined}
  className="c0 c1"
  disabled={undefined}
  size="regular"
>
  <div
    className="c2 c3"
  >
    <svg
      className="c4"
      color="grey"
      viewBox="0 0 18 18"
    >
      <path
        d="M5.8 3.3L11.4 9l-5.6 5.7 1.4 1.4 7-7.1-7-7.1z"
      />
    </svg>
  </div>
</button>
`;
